--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "assert": "^2.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "eslint": "^5.15.1",
+    "eslint": "^7.6.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.12.4",
